# ptb-mensa

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py
ptb_mensa/: __init__.py  __main__.py  intern.py
