[metadata]
name = ptb_mensa
version = 2.0
author = Hans Niklas Jacob
author_email = hnj@posteo.de
url = https://github.com/hnj2/ptb-mensa
description = Retrieve the PTB mensa's (in Berlin) menu

classifiers= Development Status :: 4 - Beta
             License :: OSI Approved :: GNU General Public License v3 (GPLv3)
             Programming Language :: Python :: 3.8

license = GNU General Public License v3 (GPLv3)
license_files = LICENSE

[options]
packages = ptb_mensa
python_requires = >=3.8
install_requires = requests
                   easyocr
                   scikit-image
                   numpy
                   prettytable

[options.entry_points]
console_scripts = ptb-mensa = ptb_mensa.__main__:main
